# Anti-Reversing-Techniques

./: README.md
Technique1/: CMakeLists.txt  VOwh42NBmFLRnfRi0SEh0eDoVpv6lD0W  key-gen.py  tech1.c
Technique2/: CMakeLists.txt  new_memcmp.c
Technique3/: CMakeLists.txt  size.lds
Technique4/: CMakeLists.txt  Technique4.c  xor_strings.h
